# streamingonapple

./: .gitignore  README.md  docker-compose.yml
py-extract/: pyproject.toml
py-extract/src/appleparser/: __init__.py  __main__.py  properties.py  request.py  state.py
py-extract/src/appleparser/providers/: appletv.py
